Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UStaticMeshComponent.h

	DOTNET_EXPORT auto E_UStaticMeshComponent_GetShadowIndirectOnly(UStaticMeshComponent* Self)
	{
		return Self->GetShadowIndirectOnly();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetSocketTransform(UStaticMeshComponent* Self, char* InSocketName, ERelativeTransformSpace TransformSpace)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		auto _p1 = TransformSpace;
		return (INT_PTR) new FTransform(Self->GetSocketTransform(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetStaticLightMapResolution(UStaticMeshComponent* Self)
	{
		return Self->GetStaticLightMapResolution();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetTextureLightAndShadowMapMemoryUsage(UStaticMeshComponent* Self, int32 InWidth, int32 InHeight, int32 OutLightMapMemoryUsage, int32 OutShadowMapMemoryUsage)
	{
		auto _p0 = InWidth;
		auto _p1 = InHeight;
		auto _p2 = OutLightMapMemoryUsage;
		auto _p3 = OutShadowMapMemoryUsage;
		Self->GetTextureLightAndShadowMapMemoryUsage(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetTextureStreamingTransformScale(UStaticMeshComponent* Self)
	{
		return Self->GetTextureStreamingTransformScale();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_HasAnySockets(UStaticMeshComponent* Self)
	{
		return Self->HasAnySockets();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_HasLightmapTextureCoordinates(UStaticMeshComponent* Self)
	{
		return Self->HasLightmapTextureCoordinates();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_HasValidSettingsForStaticLighting(UStaticMeshComponent* Self, bool bOverlookInvalidComponents)
	{
		auto _p0 = bOverlookInvalidComponents;
		return Self->HasValidSettingsForStaticLighting(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_InvalidateLightingCacheDetailed(UStaticMeshComponent* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsMaterialSlotNameValid(UStaticMeshComponent* Self, char* MaterialSlotName)
	{
		auto _p0 = ConvertFromManage_FName(MaterialSlotName);
		return Self->IsMaterialSlotNameValid(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsNavigationRelevant(UStaticMeshComponent* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsPrecomputedLightingValid(UStaticMeshComponent* Self)
	{
		return Self->IsPrecomputedLightingValid();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_NotifyObjectReferenceEliminated(UStaticMeshComponent* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnCreatePhysicsState(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnDestroyPhysicsState(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnRegister(UStaticMeshComponent* Self)
	{
		Self->OnRegister();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnUnregister(UStaticMeshComponent* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostInitProperties(UStaticMeshComponent* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostLoad(UStaticMeshComponent* Self)
	{
		Self->PostLoad();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PropagateLightingScenarioChange(UStaticMeshComponent* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ReleaseResources(UStaticMeshComponent* Self)
	{
		Self->ReleaseResources();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RemoveInstanceVertexColors(UStaticMeshComponent* Self)
	{
		Self->RemoveInstanceVertexColors();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RemoveInstanceVertexColorsFromLOD(UStaticMeshComponent* Self, int32 LODToRemoveColorsFrom)
	{
		auto _p0 = LODToRemoveColorsFrom;
		Self->RemoveInstanceVertexColorsFromLOD(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RequiresOverrideVertexColorsFixup(UStaticMeshComponent* Self)
	{
		return Self->RequiresOverrideVertexColorsFixup();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetCollisionProfileName(UStaticMeshComponent* Self, char* InCollisionProfileName)
	{
		auto _p0 = ConvertFromManage_FName(InCollisionProfileName);
		Self->SetCollisionProfileName(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetDistanceFieldSelfShadowBias(UStaticMeshComponent* Self, float NewValue)
	{
		auto _p0 = NewValue;
		Self->SetDistanceFieldSelfShadowBias(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetForcedLodModel(UStaticMeshComponent* Self, int32 NewForcedLodModel)
	{
		auto _p0 = NewForcedLodModel;
		Self->SetForcedLodModel(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetMaterialPreview(UStaticMeshComponent* Self, int32 InMaterialIndexPreview)
	{
		auto _p0 = InMaterialIndexPreview;
		Self->SetMaterialPreview(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetSectionPreview(UStaticMeshComponent* Self, int32 InSectionIndexPreview)
	{
		auto _p0 = InSectionIndexPreview;
		Self->SetSectionPreview(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetStaticLightingMapping(UStaticMeshComponent* Self, bool bTextureMapping, int32 ResolutionToUse)
	{
		auto _p0 = bTextureMapping;
		auto _p1 = ResolutionToUse;
		return Self->SetStaticLightingMapping(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShouldCollideWhenPlacing(UStaticMeshComponent* Self)
	{
		return Self->ShouldCollideWhenPlacing();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShouldRecreateProxyOnUpdateTransform(UStaticMeshComponent* Self)
	{
		return Self->ShouldRecreateProxyOnUpdateTransform();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SupportsDefaultCollision(UStaticMeshComponent* Self)
	{
		return Self->SupportsDefaultCollision();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SupportsDitheredLODTransitions(UStaticMeshComponent* Self)
	{
		return Self->SupportsDitheredLODTransitions();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SupportsStaticLighting(UStaticMeshComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->SupportsStaticLighting_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UpdateCollisionFromStaticMesh(UStaticMeshComponent* Self)
	{
		Self->UpdateCollisionFromStaticMesh();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UsesOnlyUnlitMaterials(UStaticMeshComponent* Self)
	{
		return Self->UsesOnlyUnlitMaterials();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UsesTextureLightmaps(UStaticMeshComponent* Self, int32 InWidth, int32 InHeight)
	{
		auto _p0 = InWidth;
		auto _p1 = InHeight;
		return Self->UsesTextureLightmaps(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddAngularImpulse(UStaticMeshComponent* Self, INT_PTR Impulse, char* BoneName, bool bVelChange)
	{
		auto _p0 = *(FVector*)Impulse;
		auto _p1 = ConvertFromManage_FName(BoneName);
		auto _p2 = bVelChange;
		Self->AddAngularImpulse(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddAngularImpulseInRadians(UStaticMeshComponent* Self, INT_PTR Impulse, char* BoneName, bool bVelChange)
	{
		auto _p0 = *(FVector*)Impulse;
		auto _p1 = ConvertFromManage_FName(BoneName);
		auto _p2 = bVelChange;
		Self->AddAngularImpulseInRadians(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddForce(UStaticMeshComponent* Self, INT_PTR Force, char* BoneName, bool bAccelChange)
	{
		auto _p0 = *(FVector*)Force;
		auto _p1 = ConvertFromManage_FName(BoneName);
		auto _p2 = bAccelChange;
		Self->AddForce(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddForceAtLocation(UStaticMeshComponent* Self, INT_PTR Force, INT_PTR Location, char* BoneName)
	{
		auto _p0 = *(FVector*)Force;
		auto _p1 = *(FVector*)Location;
		auto _p2 = ConvertFromManage_FName(BoneName);
		Self->AddForceAtLocation(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddForceAtLocationLocal(UStaticMeshComponent* Self, INT_PTR Force, INT_PTR Location, char* BoneName)
	{
		auto _p0 = *(FVector*)Force;
		auto _p1 = *(FVector*)Location;
		auto _p2 = ConvertFromManage_FName(BoneName);
		Self->AddForceAtLocationLocal(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddImpulse(UStaticMeshComponent* Self, INT_PTR Impulse, char* BoneName, bool bVelChange)
	{
		auto _p0 = *(FVector*)Impulse;
		auto _p1 = ConvertFromManage_FName(BoneName);
		auto _p2 = bVelChange;
		Self->AddImpulse(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddImpulseAtLocation(UStaticMeshComponent* Self, INT_PTR Impulse, INT_PTR Location, char* BoneName)
	{
		auto _p0 = *(FVector*)Impulse;
		auto _p1 = *(FVector*)Location;
		auto _p2 = ConvertFromManage_FName(BoneName);
		Self->AddImpulseAtLocation(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddRadialForce(UStaticMeshComponent* Self, INT_PTR Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff, bool bAccelChange)
	{
		auto _p0 = *(FVector*)Origin;
		auto _p1 = Radius;
		auto _p2 = Strength;
		auto _p3 = Falloff;
		auto _p4 = bAccelChange;
		Self->AddRadialForce(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddRadialImpulse(UStaticMeshComponent* Self, INT_PTR Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff, bool bVelChange)
	{
		auto _p0 = *(FVector*)Origin;
		auto _p1 = Radius;
		auto _p2 = Strength;
		auto _p3 = Falloff;
		auto _p4 = bVelChange;
		Self->AddRadialImpulse(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AreAllCollideableDescendantsRelative(UStaticMeshComponent* Self, bool bAllowCachedValue)
	{
		auto _p0 = bAllowCachedValue;
		return ((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->AreAllCollideableDescendantsRelative_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AreSymmetricRotations(UStaticMeshComponent* Self, INT_PTR A, INT_PTR B, INT_PTR Scale3D)
	{
		auto _p0 = *(FQuat*)A;
		auto _p1 = *(FQuat*)B;
		auto _p2 = *(FVector*)Scale3D;
		return Self->AreSymmetricRotations(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_BeginPlay(UStaticMeshComponent* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CalculateMass(UStaticMeshComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		return Self->CalculateMass(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CanCharacterStepUp(UStaticMeshComponent* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		return Self->CanCharacterStepUp(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CreateRenderState_Concurrent(UStaticMeshComponent* Self)
	{
		Self->CreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_DestroyRenderState_Concurrent(UStaticMeshComponent* Self)
	{
		Self->DestroyRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_FinishDestroy(UStaticMeshComponent* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetAngularDamping(UStaticMeshComponent* Self)
	{
		return Self->GetAngularDamping();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetCollisionObjectType(UStaticMeshComponent* Self)
	{
		return Self->GetCollisionObjectType();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetCollisionResponseToChannel(UStaticMeshComponent* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetCollisionResponseToChannel(_p0);
	}